# gapbuffer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gb/: gap_buffer.cpp  gap_buffer.hpp  movement.cpp  movement.hpp  text.cpp  text.hpp
unittest/: unit_test.cpp  unit_test.hpp
